--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-python-telegram-bot==13.0
-googletrans==3.0.0
-gTTS==2.1.1
+python-telegram-bot==13.0  # LGPL-3
+googletrans==3.0.0  # MIT License
+gTTS==2.1.1  # MIT License
+
