--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==13.0  # LGPL-3
-googletrans==3.0.0  # MIT License
-gTTS==2.1.1  # MIT License
-
+python-telegram-bot==13.1
+googletrans==4.0.0rc1
+gTTS==2.2.1
