feat(tutor): fixed docker compose

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 LOGGING_LEVEL=INFO 
 
 # This is a fake Telegram bot API token, for example only
-TELEGRAM_TOKEN="123456789:ABCDEFGHIJKLMNOabcdefghijklmnopqrst"
+TELEGRAM_TOKEN=123456789:ABCDEFGHIJKLMNOabcdefghijklmnopqrst
 
-LEARNING_LANGUAGE="en"
-NATIVE_LANGUAGE="ru"  # or any language which you know
+LEARNING_LANGUAGE=en
+NATIVE_LANGUAGE=ru  # or any language which you know
