feat(tutor): updated docker compose

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # CRITICAL, ERROR, FATAL, WARNING, INFO, DEBUG, NOTSET
 LOGGING_LEVEL=INFO 
 
-# This is a fake Telegram bot API token, for example only
+# This is a fake Telegram bot API token
 TELEGRAM_TOKEN=123456789:ABCDEFGHIJKLMNOabcdefghijklmnopqrst
 
 LEARNING_LANGUAGE=en
