chore: udpdated env example

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ LOGGING_LEVEL=INFO
 TELEGRAM_TOKEN=123456789:ABCDEFGHIJKLMNOabcdefghijklmnopqrst
 
 LEARNING_LANGUAGE=en
-NATIVE_LANGUAGE=ru
+NATIVE_LANGUAGE=fr
